# minilogue-manipulation

./: config.yml  main.py  models.py  pyproject.toml  requirements.txt
